# hw3-rileyyu777

./: .gitignore  Makefile  README.md  ai_documentation.txt  myst.yml  pyproject.toml
ligotools/: utils.py
ligotools.egg-info/: PKG-INFO
ligotools/tests/: test_readligo.py  test_utils.py
