[build-system]
requires = ["setuptools>=70", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "ligotools"
version = "0.1.0"
description = "LIGO gravitational wave detection utilities for Stat 159 HW 3"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Ligo Scientific Collaboration (LSC)" },
  { name = "Riley Yu" }
]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "h5py"
]

[tool.setuptools]
packages = ["ligotools"]
